# barley

./: .gitignore  .hgignore  Index.hs  LICENSE  README.markdown  SYLLABUS.markdown  TODO  Template.hi  barley.cabal  barley.hs
playground/: .wearehere
public/: scaffold.css
seed/: Chapter01.hs  Chapter02.hs  Chapter03.hs  Documentation.hs  EchoRequest.hs  FirstPage.hs  Index.hs  Project.hs  Source.hs  Source.js  Template.hs
seed/Chapter1/: Step1.hs  Step2.hs  Step3.hs  Step4.hs  Step5.hs  Step6.hs  Step7.hs  Step_1_1.hs  Step_1_2.hs  Step_1_3.hs  Step_1_4.hs  Step_1_5.hs  Step_1_6.hs  Step_1_7.hs
seed/Chapter2/: Step21.hs  Step_2_1.hs  Step_2_2.hs  Step_2_3.hs  Step_2_4.hs  Step_2_5.hs  Step_2_6.hs
seed/Chapter3/: Step_3_1.hs  Step_3_2.hs  Step_3_3.hs  Step_3_4.hs  Step_3_5.hs  Step_3_6.hs  Step_3_7.hs
seed/lib/: DevUtils.hs  Slides.hs  Tutorial.hs
seed/static/: Slides.js  barley.css  codemirror.css  codemirror.js  codemirror_base_min.js  codemirror_min.js  codemirror_parse_dummy_min.js  codemirror_parse_haskell.js  scaffold.css  slides.css
seed/static/mode/: haskell.css  haskell.js
src/: Main.hs
src/Barley/: AltLoad.hs  Init.hs  Loader.hs  Project.hs  Utils.hs
