Name:                barley
Version:             0.1
License:             OtherLicense
License-file:        LICENSE
Author:              Johan Tibell, Mark Lentczner
Maintainer:          markl@glyphic.com
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

data-files:
  seed/Documentation.hs
  seed/EchoRequest.hs
  seed/Index.hs
  seed/lib/DevUtils.hs
  seed/Project.hs
  seed/Source.hs
  seed/Source.js
  seed/static/barley-and-beetle.png
  seed/static/barley-logo.png
  seed/static/barley.css
  seed/static/codemirror.css
  seed/static/codemirror_base_min.js
  seed/static/codemirror_min.js
  seed/static/codemirror_parse_dummy_min.js
  seed/static/codemirror_parse_haskell.js
  seed/static/hslogo-16.png
  seed/static/jquery.js
  seed/static/ribbon.png
  seed/static/silk/*.png
  seed/static/stripe.png
  seed/Template.hs

extra-source-files:
  LICENSE-CodeMirror
  README.markdown
  SYLLABUS.markdown

Executable barley
  Main-is: Main.hs
  hs-source-dirs: src

  other-modules:
    Barley.AltLoad
    Barley.Loader
    Barley.Project
    
  Build-depends:
    base < 4.3,
    bytestring < 1.0,
    containers < 0.4,
    directory < 1.1,
    filepath < 1.2,
    ghc >= 6.10,
    ghc-prim,
    plugins >= 1.5.1.4,
    snap-core == 0.2.*,
    snap-server == 0.2.*,
    html < 1.1.2,
    text < 0.11,
    transformers

  ghc-options: -Wall
  if impl(ghc >= 6.8)
    ghc-options: -fwarn-tabs
