Name:                barley
Version:             0.1
License:             OtherLicense
License-file:        LICENSE
Author:              Johan Tibell, Mark Lentczner
Maintainer:          markl@glyphic.com
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

data-files:
  seed/Documentation.hs
  seed/EchoRequest.hs
  seed/Index.hs
  seed/lib/DevUtils.hs
  seed/Project.hs
  seed/Source.hs
  seed/Source.js
  seed/static/barley-and-beetle.png
  seed/static/barley-logo.png
  seed/static/barley.css
  seed/static/codemirror.css
  seed/static/codemirror_base_min.js
  seed/static/codemirror_min.js
  seed/static/codemirror_parse_dummy_min.js
  seed/static/codemirror_parse_haskell.js
  seed/static/hslogo-16.png
  seed/static/jquery.js
  seed/static/ribbon.png
  seed/static/silk/*.png
  seed/static/stripe.png
  seed/Template.hs

extra-source-files:
  LICENSE-CodeMirror
  README.markdown
  SYLLABUS.markdown

Executable barley
  Main-is: Main.hs
  hs-source-dirs: src

  other-modules:
    Barley.AltLoad
    Barley.Loader
    Barley.Project
    
  Build-depends:
    base == 4.*,
    bytestring == 0.9.*,
    containers >= 0.3 && < 0.5,
    directory >= 1.0 && < 1.2,
    filepath >= 1.1 && < 1.3,
    ghc >= 6.10 && < 7.1,
    ghc-prim == 0.2.*,
    plugins >= 1.5.1.4 && < 1.6,
    snap-core == 0.4.*,
    snap-server == 0.4.*,
    html == 1.0.*,
    text >= 0.7 && < 0.12,
    unix == 2.4.*,
    transformers == 0.2.*

  ghc-options: -Wall
  if impl(ghc >= 6.8)
    ghc-options: -fwarn-tabs
