Name:                barley
Version:             0.3
License:             OtherLicense
License-file:        LICENSE
Author:              Johan Tibell, Mark Lentczner
Maintainer:          markl@glyphic.com
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.8
Synopsis:            A web based environment for learning and tinkering with Haskell
Description:
    Barley is an environment for tinkering with Haskell.  It is a web
    server with an embedded simple programming environment rendered as
    web pages.  The environment allows you to easily edit Haskell code
    and quickly see the result of running it.
    
    Barley includes a tutorial aimed at people with some programming
    and web experience, but it assumes no exposure to Haskell or
    functional programming.  The tutorial takes the developer from
    generating a simple web page through a modest web application with
    database backend storage.  Along the way it exposes the programmer
    to the basic idioms needed to do simple programming tasks.

data-files:
	seed/Chapter01.hs
	seed/Chapter02.hs
	seed/Chapter03.hs
	seed/Chapter1/Step_1_1.hs
	seed/Chapter1/Step_1_2.hs
	seed/Chapter1/Step_1_3.hs
	seed/Chapter1/Step_1_4.hs
	seed/Chapter1/Step_1_5.hs
	seed/Chapter1/Step_1_6.hs
	seed/Chapter1/Step_1_7.hs
	seed/Chapter2/Step_2_1.hs
	seed/Chapter2/Step_2_2.hs
	seed/Chapter2/Step_2_3.hs
	seed/Chapter2/Step_2_4.hs
	seed/Chapter2/Step_2_5.hs
	seed/Chapter2/Step_2_6.hs
	seed/Chapter3/Step_3_1.hs
	seed/Chapter3/Step_3_2.hs
	seed/Chapter3/Step_3_3.hs
	seed/Chapter3/Step_3_4.hs
	seed/Chapter3/Step_3_5.hs
	seed/Chapter3/Step_3_6.hs
	seed/Chapter3/Step_3_7.hs
	seed/Documentation.hs
	seed/EchoRequest.hs
	seed/FirstPage.hs
	seed/Index.hs
	seed/lib/DevUtils.hs
	seed/lib/Slides.hs
	seed/lib/Tutorial.hs
	seed/Project.hs
	seed/Source.hs
	seed/Source.js
	seed/static/barley-and-beetle.png
	seed/static/barley-logo.png
	seed/static/barley.css
	seed/static/codemirror.css
	seed/static/codemirror_base_min.js
	seed/static/codemirror_min.js
	seed/static/codemirror_parse_dummy_min.js
	seed/static/codemirror_parse_haskell.js
	seed/static/hslogo-16.png
	seed/static/jquery.js
	seed/static/ribbon.png
	seed/static/silk/arrow_down.png
	seed/static/silk/exclamation.png
	seed/static/silk/folder.png
	seed/static/silk/image.png
	seed/static/silk/lightning.png
	seed/static/silk/link.png
	seed/static/silk/magnifier.png
	seed/static/silk/page_white.png
	seed/static/silk/page_white_code.png
	seed/static/silk/page_white_code_red.png
	seed/static/silk/page_white_world.png
	seed/static/silk/pencil.png
	seed/static/slides.css
	seed/static/Slides.js
	seed/static/stripe.png
	seed/static/switches.png
	seed/Template.hs

extra-source-files:
  LICENSE-CodeMirror
  README.markdown
  SYLLABUS.markdown

Executable barley
  Main-is: Main.hs
  hs-source-dirs: src

  other-modules:
    Barley.AltLoad
    Barley.Loader
    Barley.Project
    Barley.Utils
    
  Build-depends:
    base == 4.*,
    bytestring == 0.9.*,
    containers >= 0.3 && < 0.5,
    directory >= 1.0 && < 1.2,
    filepath >= 1.1 && < 1.3,
    ghc >= 6.10 && < 7.1,
    ghc-prim == 0.2.*,
    plugins >= 1.5.1.4 && < 1.6,
    snap-core == 0.4.*,
    snap-server == 0.4.*,
    html == 1.0.*,
    text >= 0.7 && < 0.12,
    unix == 2.4.*,
    transformers == 0.2.*

  ghc-options: -Wall
  if impl(ghc >= 6.8)
    ghc-options: -fwarn-tabs
